# quasar

./: .gitignore  .scalafmt.conf  CHANGELOG.md  CLAUDE.md  PLAN_EXPERIMENTAL_validation_chap4.md  README.md  build.sbt  mkdocs.yml
analysis/src/main/scala/io/quasar/analysis/: Cegar.scala  Intervention.scala  ModelStats.scala  QuantCegar.scala  Quantitative.scala  Reachability.scala  Scenarios.scala  Symbolic.scala  SymbolicCtmc.scala  SymbolicMdd.scala  Topology.scala  Transform.scala  ValidationMetrics.scala
analysis/src/test/scala/io/quasar/analysis/: AblationSuite.scala  CegarSuite.scala  ExactOracle.scala  InterventionSuite.scala  PhaseTypeSuite.scala  QuantCegarSuite.scala  QuantitativeSuite.scala  ReachabilitySuite.scala  ScenariosSuite.scala  SoundnessSuite.scala  SweepMetricSuite.scala  SymbolicCtmcSuite.scala  SymbolicMddSuite.scala  SymbolicSuite.scala  TopologySuite.scala  TransformSuite.scala  (+1 more)
bench/models/: cellfate.bnd  cellfate.cfg  multivalued-demo.anx  p53-mdm2.anx  p53-mdm2.bnd  p53-mdm2.cfg  phasetype-demo.anx
docs/: api.md  conception.md  getting-started.md  index.md  python.md  usage.md
experiments/: README.md  _build_notebook.py  _build_notebook_all.py  acquire_models.sh  retest_all.py  validation_all_models.ipynb  validation_chap4.bundle  validation_chap4.ipynb
experiments/figures/: fig2_data.csv  fig3_data.csv  fig4_data.csv
experiments/figures_all/: justesse_data.csv  scalabilite_data.csv
project/: plugins.sbt
pyquasar/: README.md  pyproject.toml
pyquasar/pyquasar/: __init__.py
pyquasar/tests/: test_smoke.py
(+64 files in other folders)
